# butterfly_classification

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
butterfly_classification/: download_dataset.py  utils.py
butterfly_classification/inference/: predict.py
butterfly_classification/model_conversion_pipeline/: pipeline.py  utils.py
butterfly_classification/train_pipeline/: data_module.py  dataset.py  model.py  model_loader.py  train.py
configs/: model_conversion.yaml  predict_config.yaml  train_config.yaml
data/: dataset.dvc
